--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.5.0",
     "mdbreact": "^4.25.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "fslightbox-react": "^1.4.9"
   }
 }
